schedule and new sponsor logos

--- a/index.html
+++ b/index.html
@@ -205,19 +205,137 @@
     </div>
   </div>
 </div>
-<!--
-<div class="info-section background-1">
+
+<div class="info-section background-2">
   <div class="container">
-    <a name="companies"> </a><h3>featured companies</h3> 
-    <div class="company row">
-      <img class="logo col-md-3" src="res/F2FLogo_300.png"/>
-      <p class="col-md-9">
-        <h2> $1000 worth of API prizes </h2>
-      </p>
+    <a name="schedule"> </a><h3>schedule</h3> 
+    <div class="schedule row">
+      <div class="col-md-6">
+       <h4> 1/24/2014 </h4>
+      </div>
+      <div class="col-md-6">
+        <h4> 1/25/2014 </h4>
+      </div>
+      <div class="col-md-12">
+        <hr style="background-color: #FFF;" />
+      </div>
+      <div class="col-md-6">
+        <div class="schedule-item">
+          <span class="time">7:00pm</span>
+          <span class="event"> Arrival and Networking </span>
+        </div>
+
+        <div class="schedule-item">
+          <span class="time">7:30pm</span>
+          <span class="event">Greetings and Opening Keynote</span>
+        </div>
+
+        <div class="schedule-item">
+          <span class="time">8:00pm</span>
+          <span class="event">Sponsor Messages and API Presentations</span>
+        </div>
+
+        <div class="schedule-item">
+          <span class="time">9:00pm</span>
+          <span class="event">Idea & Team Submission Deadline</span>
+        </div>
+
+        <div class="schedule-item">
+          <span class="time">9:00pm - ???</span>
+          <span class="event">Hacking Begins</span>
+        </div>
+
+        <div class="schedule-item">
+          <span class="time">11:00pm</span>
+          <span class="event">Icecream & Cookie Break</span>
+        </div>
+
+      </div>
+      <div class="col-md-6">
+
+        <div class="schedule-item">
+          <span class="time">12:00am</span>
+          <span class="event">Raffle and Awesome Giveaways</span>
+        </div>
+
+        <div class="schedule-item">
+          <span class="time">12:00am - ???</span>
+          <span class="event">Hack Strong!</span>
+        </div>
+
+        <div class="schedule-item">
+          <span class="time">7:00am</span>
+          <span class="event">Breakfast of the Brave</span>
+        </div>
+
+        <div class="schedule-item">
+          <span class="time">10:00am</span>
+          <span class="event">Mentors Available</span>
+        </div>
+
+        <div class="schedule-item">
+          <span class="time">12:00pm</span>
+          <span class="event">Power Lunch</span>
+        </div>
+
+        <div class="schedule-item">
+          <span class="time">2:30pm</span>
+          <span class="event">Late Lunch yummm</span>
+        </div>
+
+        <div class="schedule-item">
+          <span class="time">5:00pm</span>
+          <span class="event">Time's up! FINAL DEMOS</span>
+        </div>
+
+        <div class="schedule-item">
+          <span class="time">6:00pm</span>
+          <span class="event">Dinner!</span>
+        </div>
+
+        <div class="schedule-item">
+          <span class="time">6:45pm</span>
+          <span class="event">Awards</span>
+        </div>
+
+        <div class="schedule-item">
+          <span class="time">7:00pm</span>
+          <span class="event">Go Home</span>
+        </div>
+      </div>
+
     </div>
   </div>
 </div>
--->
+
+<div class="info-section background-1">
+  <div class="container">
+    <a name="sponsor"></a><h3>sponsors</h3>
+    <div class="sponsor-logo-row-1">
+        <img class="img-responsive sponsor-logo" src="res/sponsor_logo/microsoft_cropped.png">
+    </div>
+    <div class="sponsor-logo-row-2">
+        <a href="http://www.spacex.com/">
+          <img class="img-responsive sponsor-logo" src="res/sponsor_logo/spaceX_cropped.png">
+        </a>
+
+        <a href="http://food2fork.com/?ref=hackpoly">
+          <img class="img-responsive sponsor-logo" src="res/sponsor_logo/F2FLogo.png">
+        </a>
+    </div>
+
+    <div class="sponsor-logo-row-2">
+
+     <img class="img-responsive sponsor-logo" src="res/sponsor_logo/pre-chiro_logo_no_bg.png">
+
+     <a href="http://atthepool.com/">
+      <span><img class="img-responsive sponsor-logo" src="res/sponsor_logo/logo500.png"></span>
+     </a>
+
+    </div>
+  </div>
+</div>
+
 <div class="info-section background-2">
   <div class="container">
     <a name="faq"> </a><h3>faq</h3>
