featured speaker and sony

--- a/index.html
+++ b/index.html
@@ -328,10 +328,15 @@
 
      <img class="img-responsive sponsor-logo" src="res/sponsor_logo/pre-chiro_logo_no_bg.png">
 
+
      <a href="http://atthepool.com/">
       <span><img class="img-responsive sponsor-logo" src="res/sponsor_logo/logo500.png"></span>
      </a>
 
+    </div>
+
+    <div class="sponsor-logo-row-2">
+      <img class="img-responsive sponsor-logo" src="res/sponsor_logo/atthepool_alex_cropped.png">
     </div>
   </div>
 </div>
@@ -386,6 +391,25 @@
     </div>
   </div>
 </div>
+
+<div class= "info-section background-1">
+  <div class="container">
+    <a name="speaker"></a><h3> featured speaker </h3>
+    <div class="row">
+
+      <div class="col-md-4">
+        <img class="img-circle img-responsive" src="res/atthepool_alex_cropped.png">
+      </div>
+
+      <div class="col-md-8">
+        <a href="http://www.linkedin.com/in/alexcaps"><h4> Alex Capecelatro </h4></a> is the CEO & Founder of At The Pool, a social discovery platform making it easy to connect with like-minded people nearby.  At The Pool has been featured in Forbes, LA Times, TechCrunch, and more, with members in more than 100 countries.  Alex received his bachelors degree in Materials Science & Engineering from UCLA in 2010.  Prior to starting At The Pool, Alex lead sustainability initiatives at electric-car company Fisker Automotive and consulted for firms including the X Prize Foundation, the Naval Research Lab, and Aerogel Technologies.  In his spare time, Alex works with the LA Coalition on economic development, is an avid hiker, cyclist, and skydiver, and loves to travel.  
+      </div>
+
+    </div>
+
+  </div>
+</div>
+
 
 <div class="footer">
   <div class="row">
