robert rose director of flight software at space x

--- a/index.html
+++ b/index.html
@@ -394,9 +394,19 @@
 
 <div class= "info-section background-1">
   <div class="container">
-    <a name="speaker"></a><h3> featured speaker </h3>
-    <div class="row">
+    <a name="speaker"></a><h3> featured speakers </h3>
 
+    <div class="row">
+      <div class="col-md-8">
+        <a href="http://www.linkedin.com/in/robertwrose"><h4>Robert Rose</h4></a>
+         <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;is the director of the Flight Software organization at SpaceX, where he gets to work with some great people on code that gets things into space. Prior to joining SpaceX, Robert worked for Sony Computer Entertainment as a game programmer on "Game of the Year" winners Dark Mirror, Logan's Shadow and Resistance: Retribution.</p>
+      </div>
+      <div class="col-md-4">
+        <a href="http://www.linkedin.com/in/robertwrose"> <img src="res/robert.jpg" class="img-circle img-responsive"></a>
+      </div>
+    </div>
+    <hr />
+    <div class="row">
       <div class="col-md-4">
        <a href="http://www.linkedin.com/in/alexcaps"> <img class="img-circle img-responsive" src="res/atthepool_alex_cropped.png"> </a>
       </div>
