--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 
         <div class="schedule-item">
           <span class="time">11:00pm</span>
-          <span class="event">Icecream & Cookie Break</span>
+          <span class="event">Icecream & Cookie & Pizza Break</span>
         </div>
 
       </div>
@@ -276,6 +276,11 @@
         <div class="schedule-item">
           <span class="time">12:00pm</span>
           <span class="event">Power Lunch</span>
+        </div>
+
+        <div class="schedule-item">
+          <span class="time">2:00pm</span>
+          <span class="event">PROJECT SUBMISSION DEADLINE</span>
         </div>
 
         <div class="schedule-item">
