hackpoly 2015 landing page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
 
   <link rel="stylesheet" type="text/css" href="res/HackPolyCSS-altnav.css">
-  <title>HackPoly | Cal Poly Pomona's First Hackathon</title>
+  <title>HackPoly | Cal Poly Pomona's Hackathon</title>
 
 
 </head>
@@ -33,7 +33,7 @@
           <li><a href="#about">about</a></li>
           <li><a href="#faq"> faq </a></li>
           <li>
-            <a href="http://hackpoly.eventbrite.com"> 
+            <a href="http://eepurl.com/4JMM1"> 
               register 
             </a> 
           </li>
@@ -48,7 +48,7 @@
     <div class="container">
 
       <div class="btn-group">
-        <a href="http://hackpoly.eventbrite.com" class="btn btn-lg btn-success">Register</a>
+        <a href="http://eepurl.com/4JMM1" class="btn btn-lg btn-success">Register</a>
         <a href="mailto:sponsorship@hackpoly.com" class="btn btn-lg btn-info">Sponsor</a>
       </div>
 
@@ -58,14 +58,14 @@
             <div class="row">
               <div class="col-md-12 landing-text">
                 <h1>Cal Poly Pomona's</h1> <br />
-                <h1>First Hackathon</h1>
+                <h1>Hackathon</h1>
                 <!-- <p>
                   Open to Cal Poly Pomona's students of <span style="color:#FFF;text-shadow: 0px 1px 1px rgba(0, 0, 0, .6);">ALL MAJORS</span>.
                 </p> -->
                 
               </div>
             </div>
-            <div class="row">
+            <!--<div class="row">
               <div class="landing-info">
                   <div class="col-md-5 col-xs-12 ic-prefix">
                     <h4>
@@ -84,7 +84,7 @@
                   </div>
               </div>
               
-            </div>
+            </div>-->
         </div>
 
         <!-- <div class="col-md-4 col-sm-4 col-lg-4 col-xs-12">
@@ -142,9 +142,9 @@
   <div class="container">
     <a name="about"> </a><h3>about</h3> 
     <p class="section">
-      HackPoly ‘14 is the first Hackathon to EVER come to Cal Poly Pomona. Organized by some of the largest technical clubs on campus, spanning 4 colleges and 6 majors, HackPoly is set to be the event of the year for ingenuity, technical skills, and creativity.
+      HackPoly ‘15 is in the works and more information is on the way. <a href="http://eepurl.com/4JMM1"> Sign Up </a> for more information as it becomes available.
     </p>
-    <h4>but why?</h4>
+    <!--<h4>but why?</h4>
     <p class="section">
       We believe that Cal Poly Pomona students have the brilliance and skills to build incredible, never-before-seen, industry disrupting products. This is where they can do exactly that.
     </p>
@@ -202,10 +202,10 @@
         </div>
       </div>
 
-    </div>
+    </div>-->
   </div>
 </div>
-
+<!--
 <div class="info-section background-2">
   <div class="container">
     <a name="schedule"> </a><h3>schedule</h3> 
@@ -428,6 +428,7 @@
 
   </div>
 </div>
+-->
 
 
 <div class="footer">
@@ -447,7 +448,7 @@
       </span>
     </div>
   </div>
-  <p class="footer">© hackpoly 2013</p>
+  <p class="footer">© hackpoly 2015</p>
 </div>
 
 <!-- Twitter Code
