--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
 
   <link rel="stylesheet" type="text/css" href="res/HackPolyCSS-altnav.css">
+
+  <link rel="icon" href="res/favico.ico">
   <title>HackPoly | Cal Poly Pomona's Hackathon</title>
 
 
