--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link href="http://netdna.bootstrapcdn.com/bootswatch/3.0.0/flatly/bootstrap.min.css" rel="stylesheet">
   <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
 
-  <link rel="stylesheet" type="text/css" href="res/HackPolyCSS-altnav.css">
+  <link rel="stylesheet" type="text/css" href="res/styles.css">
 
   <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
@@ -19,6 +19,8 @@
   <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
   <meta name="msapplication-TileColor" content="#2d89ef">
 
+  <link href='http://fonts.googleapis.com/css?family=Quicksand:400,700|Oswald' rel='stylesheet' type='text/css'>
+
   <title>hackpoly | not your everyday hackathon</title>
 
 
@@ -26,8 +28,25 @@
 
 <body>
 
-  <div id="video-bg">
-    <
+  <div class="container-fluid">
+    <div id="video-bg">
+      <video class="background-video" autoplay muted loop>
+        <source src="res/bg_typing.mp4" type="video/mp4">
+        <source src="res/bg_typing.webm" type="video/webm">
+        Your browser does not support html5 video. Time to upgrade!
+      </video>
+    </div>
+
+    <div class="header-content">
+      <h1> Not your everyday hackathon. </h1>
+    </div>
+
+    <div class="container">
+      <div class="main-content">
+        About hackpoly and stuff.. wooo
+      </div>
+    </div>
+
   </div>
 
 <script src="res/jquery.min.js"></script>
