Github Pages Beta Page

--- a/index.html
+++ b/index.html
@@ -43,7 +43,25 @@
 
     <div class="container">
       <div class="main-content">
-        About hackpoly and stuff.. wooo
+        <h3>About</h3> 
+        <p>
+          Lorem ipsum dolor sit amet, ius eu sonet suscipiantur. Te insolens intellegam cum, eu velit consul democritum vel. Has feugiat lobortis an. Pri atomorum laboramus deterruisset et, laudem tibique est ei.
+        </p>
+
+        <p>
+          Enim iudico ex pri, quis oportere praesent sit at. Est fabulas sensibus an, delicata sadipscing ius te. At pro veri sapientem, qui an harum nominavi similique. Nisl illud ex pro. Mea ne harum electram vituperata, vix tollit debitis legendos eu. Mei fuisset accumsan ullamcorper ex, et copiosae prodesset quo.
+        </p>
+
+        <p>
+          Eu vix bonorum habemus, et corpora erroribus quaerendum eam. Veri homero contentiones te nec. Quod prima intellegat per at, id per exerci malorum, eos civibus omnesque posidonium ut. Eam facer salutandi signiferumque at, eos melius deserunt platonem ne.
+        </p>
+
+        <p>
+          Iusto docendi mel eu, congue labitur ne vix. Sale virtute philosophia ex mei. Cum id voluptaria definiebas, summo dolorum eam no, facete volumus cum eu. Labitur iudicabit maiestatis cu vim. Dicat vivendo pri ad, sit ex nisl habeo percipit, meliore omnesque contentiones no vim.
+        </p>
+        <p>
+          Ne eum epicurei constituam, erant populo ea usu. Clita alterum vix ea, vix an viderer dolorem lucilius. Vix in consulatu abhorreant comprehensam, nisl molestiae at vix, officiis elaboraret comprehensam his in. Fuisset fabellas sententiae quo eu. Labitur dolorum utroque eu per, no vix suas vero legimus, ius audire accusata ea. Cum at officiis apeirian, an enim illum possit usu.
+        </p>
       </div>
     </div>
 
@@ -61,5 +79,11 @@
   ga('send', 'pageview');
 
 </script>
+
+<!-- Custom Scroll functionality -->
+<script>
+
+</script>
+
 </body>
 </html>
