--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="overlay"></div>
 
       <div class="hero-line">
-        <h1> Innovation Inspiring Success </h1>
+        <h1> Hack at Cal Poly Pomona </h1>
 
         <div class="action">
           <!-- <button type="button" id="sponsor-button" class="btn btn-success btn-lg"> Sponsor </button> -->
@@ -79,32 +79,45 @@
 
     <div id="about" class="blur-module" data-blur-target="#top-image">
       <div class="container">
-        <h2> What Is hackpoly? </h2>
-        <p>
-           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ac nisl quis nunc mattis semper et vitae lorem. Praesent tincidunt sodales mollis. Nunc tempus quam non felis pharetra maximus. Curabitur in libero ex. Integer lectus ex, mattis a risus id, pellentesque molestie diam. Vivamus in sapien ac ex blandit ultricies. Duis non maximus urna, et ultrices purus.
-        </p>
+        <h2> Hackpoly is Cal Poly Pomona's Hackathon </h2>
 
-        <p>
-          Suspendisse eget feugiat lacus, eget convallis mi. Praesent et dolor id nibh blandit tincidunt ac non magna. Maecenas non libero vestibulum, accumsan ex eget, facilisis nisi. Aenean pellentesque, risus sed pharetra malesuada, lorem metus accumsan sem, volutpat auctor tellus sem at massa. Nunc ultricies tellus massa. Sed ipsum lacus, feugiat accumsan tincidunt ut, fermentum eu turpis. Mauris rutrum egestas tempor. Curabitur congue, risus non efficitur porta, dui lectus pretium arcu, in pellentesque dui mi vel ante. In nec tellus vel velit accumsan tristique eget eget nisl. Cras imperdiet magna nec tellus posuere porttitor. Morbi scelerisque, neque eu placerat mattis, magna nulla bibendum velit, a blandit sapien neque nec nisi.
-        </p>
+        <div class="row text-center">
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+            <h4> WHERE </h4> 
+            <a href = "http://maps.google.com/maps/api/staticmap?center=34.052142,-117.814411&zoom=13&markers=Cal+Poly+Pomona+3801+West+Temple+Avenue+Pomona,+CA+91768&path=color:0x0000FF80|weight:5|34.06061,-117.81652&size=500x300&sensor=TRUE_OR_FALSE">
+              Cal Poly Pomona <br />
+              Pomona, CA 91768
+            </a>
+          </div>
 
-        <p>
-           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ac nisl quis nunc mattis semper et vitae lorem. Praesent tincidunt sodales mollis. Nunc tempus quam non felis pharetra maximus. Curabitur in libero ex. Integer lectus ex, mattis a risus id, pellentesque molestie diam. Vivamus in sapien ac ex blandit ultricies. Duis non maximus urna, et ultrices purus.
-        </p>
-
-        <p>
-          Suspendisse eget feugiat lacus, eget convallis mi. Praesent et dolor id nibh blandit tincidunt ac non magna. Maecenas non libero vestibulum, accumsan ex eget, facilisis nisi. Aenean pellentesque, risus sed pharetra malesuada, lorem metus accumsan sem, volutpat auctor tellus sem at massa. Nunc ultricies tellus massa. Sed ipsum lacus, feugiat accumsan tincidunt ut, fermentum eu turpis. Mauris rutrum egestas tempor. Curabitur congue, risus non efficitur porta, dui lectus pretium arcu, in pellentesque dui mi vel ante. In nec tellus vel velit accumsan tristique eget eget nisl. Cras imperdiet magna nec tellus posuere porttitor. Morbi scelerisque, neque eu placerat mattis, magna nulla bibendum velit, a blandit sapien neque nec nisi.
-        </p>
-
-        <p>
-           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ac nisl quis nunc mattis semper et vitae lorem. Praesent tincidunt sodales mollis. Nunc tempus quam non felis pharetra maximus. Curabitur in libero ex. Integer lectus ex, mattis a risus id, pellentesque molestie diam. Vivamus in sapien ac ex blandit ultricies. Duis non maximus urna, et ultrices purus.
-        </p>
-
-        <p>
-          Suspendisse eget feugiat lacus, eget convallis mi. Praesent et dolor id nibh blandit tincidunt ac non magna. Maecenas non libero vestibulum, accumsan ex eget, facilisis nisi. Aenean pellentesque, risus sed pharetra malesuada, lorem metus accumsan sem, volutpat auctor tellus sem at massa. Nunc ultricies tellus massa. Sed ipsum lacus, feugiat accumsan tincidunt ut, fermentum eu turpis. Mauris rutrum egestas tempor. Curabitur congue, risus non efficitur porta, dui lectus pretium arcu, in pellentesque dui mi vel ante. In nec tellus vel velit accumsan tristique eget eget nisl. Cras imperdiet magna nec tellus posuere porttitor. Morbi scelerisque, neque eu placerat mattis, magna nulla bibendum velit, a blandit sapien neque nec nisi.
-        </p>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+             <h4> WHEN </h4>
+             <a target="_blank" href="https://www.google.com/calendar/event?action=TEMPLATE&tmeid=MHQzcWpjN3Y2ZDN2YTlpYWZzM2E5dGc0bXMgcWYxbHNlNXQwMjllaDdxMXQ3MWVwbWdqdDRAZw&tmsrc=qf1lse5t029eh7q1t71epmgjt4%40group.calendar.google.com">
+              Friday, Feb 20th 6 PM - <br />
+              Saturday, Feb 21st 10 PM
+             </a>
+          </div>
+        </div>
+        <div id="what">
+          <p>
+            Hackpoly is Cal Poly Pomona's event of the year for creativity, ingenuity, and technical talent. 
+          </p>
+        </div>
 
       </div>
+
+    </div>
+
+    <div id="build" class="image-module">
+      <img src="res/solder.jpg" alt="Build the Future in Southern California" />
+
+      <div class="hero-line">
+        <h1> Hack at Cal Poly Pomona </h1>
+
+      </div>
+    </div>
+
+    <div id="faq" class="blur-module" data-blur-target="#build"> 
 
     </div>
   </div>
@@ -125,7 +138,7 @@
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    })(window,document,'script','http://www.google-analytics.com/analytics.js','ga');
 
     ga('create', 'UA-46285917-1', 'hackpoly.com');
     ga('send', 'pageview');
@@ -161,6 +174,53 @@
            navVis = true;
           }
         }
+      });
+
+      //Set up image modules
+      $('.image-module').each(function(){
+        var $mod = $(this).find('img').first();
+        var modY = $mod.offset().top;
+
+        //Set height to height of image or 80% of screen (min)
+        var newHeight = $mod.height();
+        if(newHeight > $(window).height()) newHeight = $(window).height();
+        console.log($(window).height());
+
+        $(this).height($mod.height());
+
+        var fix = false;
+        // console.log($mod);
+        // console.log($mod.offset());
+        if($mod.offset().top <= 0){
+          fix = true;
+          $mod.addClass("module-fixed");
+        }else if(window.pageYOffset <= modY){
+          fix = false;
+          $mod.addClass("module-floating");
+        }
+
+        var modify = function() {
+          console.log("modify" + $mod);
+          if(!fix && $mod.offset().top <= 0){
+            console.log($mod.offset());
+            console.log($mod);
+            console.log("fixed");
+            fix = true;
+            $mod.addClass("module-fixed");
+            $mod.removeClass("module-floating");
+          }else if(fix && window.pageYOffset < modY){
+            console.log($mod.offset());
+            console.log($mod);
+            console.log("float");
+            fix = false;
+            $mod.addClass("module-floating");
+            $mod.removeClass("module-fixed");
+          }
+
+        };
+
+        $mod.scroll(modify);
+        $mod.scroll();
       });
 
       //Set up the blur modules
